plugins {
    id 'java-library'
    id 'maven-publish'
    // Spotless (formateo código) - OPCIONAL, comentado para evitar problemas en Windows con proxy/firewall
    // Descomentar si quieres formateo automático: id 'com.diffplug.spotless' version '6.19.0'
    id 'jacoco'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

// Configuración específica del módulo api-core (v1.1.0)
// Dependencias específicas para testing de APIs REST/SOAP/GraphQL
dependencies {
    // ===== DEPENDENCIA DEL FRAMEWORK COMMON =====
    // Exponer `common` como API para que sea transitivamente visible a los consumidores
    api project(':common')

    // ===== HTTP CLIENT AVANZADO =====
    // Apache HttpClient 5 — implementación activa desde v2.2.0
    api 'org.apache.httpcomponents.client5:httpclient5:5.6.1'

    // Unirest — DEPRECATED desde v2.2.0, será eliminado en v2.3.0.
    // Mantenido como 'implementation' (no transitivo) únicamente para BaseHttpClient @Deprecated.
    // Eliminar esta dependencia junto con BaseHttpClient en v2.3.0.
    implementation 'com.konghq:unirest-java:3.14.5'

    // ===== BASE DE DATOS =====
    // NOTA: HikariCP y drivers JDBC ya están en COMMON
    // api-core hereda todo desde common (no necesita duplicar)

    // ===== VALIDACIONES API REST =====
    // JSON Schema validation
    api 'com.networknt:json-schema-validator:1.0.87'

    // JSON Path para consultas avanzadas
    api 'com.jayway.jsonpath:json-path:2.9.0'  // Actualizado para resolver CVE-2023-51074

    // JSON comparison para assertions
    api 'org.skyscreamer:jsonassert:1.5.1'

    // ===== ASSERTION LIBRARIES (para validaciones API) =====
    api 'org.assertj:assertj-core:3.27.7'  // Actualizado para resolver CVE-2026-24400 (XXE vulnerability)
    api 'org.hamcrest:hamcrest:2.2'

    // ===== CUCUMBER PARA BDD (versiones específicas para API testing) =====
    api "io.cucumber:cucumber-java:${rootProject.ext.cucumberVersion}"
    api "io.cucumber:cucumber-junit-platform-engine:${rootProject.ext.cucumberVersion}"
    api 'org.junit.platform:junit-platform-suite:1.10.0'

    // ===== TESTING DEPENDENCIES =====
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0'
    testImplementation 'org.junit.platform:junit-platform-suite:1.10.0'
    testImplementation 'org.mockito:mockito-core:5.8.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'
    testImplementation 'org.assertj:assertj-core:3.27.7'

    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

// Spotless configuration para formateo de código - COMENTADO (opcional)
// Descomentar junto con el plugin si quieres formateo automático
/*
spotless {
    java {
        googleJavaFormat()
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
}
*/

// Test configuration
test {
    useJUnitPlatform()

    // Control de logging para tests
    systemProperties = [
        // Log4j2 Control
        'log4j2.configurationFile': 'classpath:log4j2.xml',
        'log4j2.level': 'INFO',
        'log4j2.rootLogger.level': 'INFO',
        'log4j2.statusLoggerLevel': 'WARN',


        // SLF4J Control
        'org.slf4j.simpleLogger.defaultLogLevel': 'INFO',
        'slf4j.internal.verbosity': 'ERROR',

        // Apache HTTP Client
        'org.apache.commons.logging.Log': 'org.apache.commons.logging.impl.SimpleLog',
        'httpclient.wire.header': 'INFO',
        'httpclient.wire.content': 'INFO'
    ]

    // JVM Arguments para control de logging
    jvmArgs = [
        '-Dlog4j2.configurationFile=classpath:log4j2.xml',
        '-Dlog4j2.level=INFO',
        '-Dorg.slf4j.simpleLogger.defaultLogLevel=error'
    ]

    testLogging {
        events 'passed', 'skipped', 'failed'
        showStandardStreams = false
        showExceptions = true
        showCauses = true
        showStackTraces = false
        exceptionFormat = 'SHORT'
    }
}

// Configuración de Javadoc
tasks.withType(Javadoc).configureEach {
    options.addStringOption('Xdoclint:none', '-quiet')
    options.encoding = 'UTF-8'
}

// Configuración adicional para compilación
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-Xlint:-unchecked', '-Xlint:-deprecation']
}

// =================================================================================
// GENERACIÓN DE JAVADOC Y SOURCES
// =================================================================================
java {
    withJavadocJar()
    withSourcesJar()
}

javadoc {
    options.encoding = 'UTF-8'
    options.charSet = 'UTF-8'
    options.author = true
    options.version = true
    failOnError = false
    options.addStringOption('Xdoclint:none', '-quiet')
}

// =================================================================================
// METADATOS DE PUBLICACIÓN
// La publicación y repositorios se configuran en el build.gradle raíz.
// Aquí solo se personaliza el POM de `api-core`.
// =================================================================================
publishing {
    publications.named('mavenJava', MavenPublication) {
        // JavaDoc y Sources ya incluidos por withJavadocJar() y withSourcesJar()
        // NO agregar manualmente para evitar duplicados
        pom {
            name = 'QA Framework - API Core'
            description = 'Framework de automatización QA - Módulo API Core con Cucumber Steps para testing de APIs REST'
            url = 'https://github.com/avenero/qa-platformCore'

            licenses {
                license {
                    name = 'Proprietary'
                    url  = 'https://github.com/avenero/qa-platformCore'
                }
            }

            developers {
                developer {
                    id = 'qa-team'
                    name = 'QA Automation Team'
                    email = 'qa-team@internal.com'
                }
            }
        }
    }
}

// Tarea para ver información de publicación
tasks.register('publishInfo') {
    doLast {
        println """
        ╔════════════════════════════════════════════════════════════╗
        ║  INFORMACIÓN DE PUBLICACIÓN - api-core
        ╠════════════════════════════════════════════════════════════╣
        ║  Group ID:    com.qa
        ║  Artifact ID: api-core
        ║  Version:     ${project.version}
        ║  
        ║  Maven Coordinates:
        ║  com.qa:api-core:${project.version}
        ║
        ║  Para usar en tu proyecto de automatización:
        ║  
        ║  dependencies {
        ║      implementation 'com.qa:api-core:${project.version}'
        ║  }
        ║
        ║  NOTA: Este JAR incluye transitivamente el módulo 'common'
        ║        con todas sus dependencias (Jackson, etc.)
        ║        Unirest ya NO es transitivo desde v2.2.0 (degradado a implementation).
        ╚════════════════════════════════════════════════════════════╝
        """.stripIndent()
    }
}

// Jacoco configuration para cobertura de código
jacoco {
    toolVersion = "0.8.11"
}

tasks.named('jacocoTestReport').configure {
    reports {
        xml.required = true
        html.required = true
    }
}

// Task para ejecutar pruebas Cucumber por tags
tasks.register('cucumberTags', Test) {
    description = 'Ejecuta pruebas Cucumber filtradas por tags'
    group = 'verification'
    useJUnitPlatform()

    if (project.hasProperty('tags')) {
        systemProperty 'cucumber.filter.tags', project.property('tags')
    }

    testLogging {
        events 'passed', 'skipped', 'failed'
    }
}

// Aplicar formateo antes de compilar - COMENTADO (requiere plugin Spotless)
// Descomentar si habilitas Spotless
/*
tasks.named('compileJava').configure {
    dependsOn tasks.named('spotlessApply')
}
*/

